--- a/app/templates/admin/contacts.hbs
+++ b/app/templates/admin/contacts.hbs
@@ -14,6 +14,7 @@
         <td>{{contact.id}}</td>
         <td>{{contact.email}}</td>
         <td>{{contact.message}}</td>
+        <td><button class="btn btn-danger btn-xs" {{action 'deleteContact' contact}}>Delete</button></td>
       </tr>
     {{/each}}
   </tbody>
