--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -4,19 +4,21 @@
   <br/><br/>
 
   <p>Don't miss our launch date, request an invitation now.</p>
+  {{#if responseMessage}}
+    <div class="alert alert-success">Thank you for subscribing the email {{model.email}}. Look forward to our mail soon!</div>
+
+  {{else}}
 
   <div class="form-horizontal form-group form-group-lg row">
-    <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-1 col-md-5 col-md-offset-2">
-      {{input type="email" value=emailAddress class="form-control" placeholder="Please type your email address." autofocus="autofocus"}}
+    <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-1 col-md-5 col-md-offset-2 {{if model.isValid 'has-success'}}">
+      {{input type="email" value=model.email class="form-control" placeholder="Please type your email address." autofocus="autofocus"}}
     </div>
     <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-4 col-md-3">
-        <button class="btn btn-primary btn-lg btn-block" disabled={{isDisabled}} {{action 'saveInvitation'}}>Request invitation</button>
+      <button class="btn btn-primary btn-lg btn-block" disabled={{model.isDisabled}} {{action 'saveInvitation' model}}>Request invitation</button>
     </div>
   </div>
-
-  {{#if responseMessage}}
-    <div class="alert alert-success">{{responseMessage}}</div>
   {{/if}}
-  
+
+
   <br/><br/>
 </div>
